--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,9 @@
 [tool.poetry]
-name = "lib-version-remla25-team12"
-version = "0.0.0"  # placeholder, overridden by git tag
-description = "Library to expose version metadata"
+name = "remla25-app"
+version = "0.0.0"
+description = "Frontend and service app for restaurant sentiment analysis"
 authors = ["Ayush"]
-packages = [{ include = "lib_version" }]
 
 [build-system]
-requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning"]
-build-backend = "poetry_dynamic_versioning.backend"
-
-[tool.poetry-dynamic-versioning]
-enable = true
-vcs = "git"
-style = "pep440"
+requires = ["poetry-core>=1.8.0"]
+build-backend = "poetry.core.masonry.api"
