--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,13 +27,18 @@ jobs:
         run: |
           echo "${{ secrets.GH_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build and Push Docker Image
         run: |
           IMG=ghcr.io/${{ github.repository }}
-          docker build \
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
             --tag $IMG:${{ env.version }} \
             --tag $IMG:${{ env.version_major }}.${{ env.version_minor }}.latest \
             --tag $IMG:${{ env.version_major }}.latest \
             --tag $IMG:latest \
-            .
-          docker push --all-tags $IMG
+            --push \
+            .          
+      
