adds making of a release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,4 +41,10 @@ jobs:
             --tag $IMG:latest \
             --push \
             .          
-      
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
