--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ git+https://github.com/remla25-team12/lib-version.git@v0.1.3#egg=lib-version-rem
 flask==3.1.0
 requests==2.32.3
 prometheus_client
+psutil
