--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 git+https://github.com/remla25-team12/lib-version.git@v0.1.3#egg=lib-version-remla25-team12
 flask==3.1.0
 requests==2.32.3
-prometheus_client
-psutil
-flasgger
+prometheus_client==0.20.0
+psutil==5.9.5
+flasgger~=0.9.7
